添加电量统计上报
Signed-off-by: xingyou.yang <xingyou.yang@megatronix.co>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.12)
 project(demo LANGUAGES C CXX)
 
+
+add_compile_options(-Wno-unused-parameter)
+
 # 设置C++标准
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -66,10 +69,18 @@ add_executable(logged_test
     tools/mqtt/mqtt_client_v2.cpp
 )
 
+
+# 创建定时器新设计测试程序
+add_executable(timer_new_design_test
+    timer_new_design_test.cpp
+    tools/timer/timer.cpp
+)
+
 # 创建充电桩程序
 add_executable(charging_station
     charging_station.cpp
     tools/mqtt/mqtt_client_v2.cpp
+    tools/timer/timer.cpp
     device/device.cpp
     config/price_table.cpp
 )
@@ -102,11 +113,18 @@ target_include_directories(logged_test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/tools/easylogger/easylogger/inc
 )
 
+
+target_include_directories(timer_new_design_test PRIVATE 
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/tools/timer
+)
+
 target_include_directories(charging_station PRIVATE 
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/tools/mqtt
     ${CMAKE_CURRENT_SOURCE_DIR}/tools/nlohmann_json/include
     ${CMAKE_CURRENT_SOURCE_DIR}/tools/easylogger/easylogger/inc
+    ${CMAKE_CURRENT_SOURCE_DIR}/tools/timer
     ${CMAKE_CURRENT_SOURCE_DIR}/device
     ${CMAKE_CURRENT_SOURCE_DIR}/config
     
@@ -119,11 +137,12 @@ target_link_libraries(mqtt_example PRIVATE Threads::Threads ${MQTT_C_LIBRARY})
 target_link_libraries(simple_test PRIVATE Threads::Threads ${MQTT_C_LIBRARY})
 target_link_libraries(debug_mqtt_test PRIVATE Threads::Threads ${MQTT_C_LIBRARY})
 target_link_libraries(logged_test PRIVATE Threads::Threads ${MQTT_C_LIBRARY} easylogger)
+target_link_libraries(timer_new_design_test PRIVATE Threads::Threads)
 target_link_libraries(charging_station PRIVATE Threads::Threads mqttc)
 # # 以 charging_station 为例，链接 EasyLogger
 target_link_libraries(charging_station PRIVATE easylogger)
 # 安装规则（可选）
-install(TARGETS mqtt_example simple_test debug_mqtt_test logged_test charging_station DESTINATION bin)
+install(TARGETS mqtt_example simple_test debug_mqtt_test logged_test timer_new_design_test charging_station DESTINATION bin)
 
 
 
